--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #ffffff;
             font-family: Arial, sans-serif;
         }
 
