--- a/index.html
+++ b/index.html
@@ -1,158 +1,15 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunshainy</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        body {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: #ffffff;
-            font-family: Arial, sans-serif;
-        }
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Theater Project Website Design</title>
+    </head>
 
-        /* From Uiverse.io by lukepadiachy */ 
-        .my-loader {
-            width: 200px;
-            height: 200px;
-            perspective: 1000px;
-            margin: auto;
-        }
-
-        .rubiks-cube {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            transform-style: preserve-3d;
-            animation: my-rotateCube 5s infinite linear;
-        }
-
-        .my-loader .face {
-            position: absolute;
-            display: flex;
-            flex-wrap: wrap;
-            width: 100%;
-            height: 100%;
-        }
-
-        .my-loader .face.front {
-            transform: translateZ(100px);
-        }
-        .my-loader .face.back {
-            transform: rotateY(180deg) translateZ(100px);
-        }
-        .my-loader .face.left {
-            transform: rotateY(-90deg) translateZ(100px);
-        }
-        .my-loader .face.right {
-            transform: rotateY(90deg) translateZ(100px);
-        }
-        .my-loader .face.top {
-            transform: rotateX(90deg) translateZ(100px);
-        }
-        .my-loader .face.bottom {
-            transform: rotateX(-90deg) translateZ(100px);
-        }
-
-        .my-loader .cube {
-            width: calc(100% / 3);
-            height: calc(100% / 3);
-            box-sizing: border-box;
-            border: 1px solid #000;
-        }
-
-        @keyframes my-rotateCube {
-            0% {
-                transform: rotateX(0deg) rotateY(0deg);
-            }
-            100% {
-                transform: rotateX(360deg) rotateY(360deg);
-            }
-        }
-    </style>
-</head>
-<body>
-    <!-- From Uiverse.io by lukepadiachy --> 
-    <div class="my-loader">
-        <div class="rubiks-cube">
-            <div class="face front">
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ffffff;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-            </div>
-
-            <div class="face back">
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ffffff;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-            </div>
-            <div class="face left">
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #ffffff;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-            </div>
-            <div class="face right">
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ffffff;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-            </div>
-            <div class="face top">
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #ffffff;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-            </div>
-            <div class="face bottom">
-                <div style="background: #ffffff;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-                <div style="background: #ffeb3b;" class="cube"></div>
-                <div style="background: #4caf50;" class="cube"></div>
-                <div style="background: #2196f3;" class="cube"></div>
-                <div style="background: #ffffff;" class="cube"></div>
-                <div style="background: #ff3d00;" class="cube"></div>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
+  
