--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>Theater Project Website Designe</title>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Futura+PT:wght@400;500;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Futura+PT:wght@400;500;700&display=swap" rel="stylesheet" crossorigin="anonymous">
       <script type="module" src="/src/main.tsx"></script>
     </head>
 
